[package]
name = "transporter"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full", "server"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-rustls = "0.26.0"
hyper-tls = "0.6.0"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
hyper-rustls = { version = "0.27.2", features = ["http2"] }
hyper-util = { version = "0.1.7", features = ["http2", "tokio", "client"] }
http-body-util = "0.1.2"
futures-util = "0.3.30"
rand = "0.9.0-alpha.2"
anyhow = "1.0.86"
futures = "0.3.30"
rustls-pki-types = "1"
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["derive"] }
